fix: alignment text

--- a/project/TestSite/style.css
+++ b/project/TestSite/style.css
@@ -28,6 +28,8 @@ section {
     place-items: center;
     align-content: center;
     min-height: 100vh;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .hidden {
